# Abbey

./: .gitignore  Cargo.toml  README.md  build-packages.sh  build.rs  install-icons.sh  pubspec.yaml  uninstall-icons.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
data/: app.abbey.Abbey.desktop
lib/: main.dart
lib/core/database/: app_database.dart  app_database.g.dart  tables.dart
lib/core/storage/: file_service.dart  file_service.g.dart  pcloud_service.dart  pcloud_service.g.dart  storage_service.dart  storage_service.g.dart
lib/core/theme/: app_theme.dart  app_theme.g.dart
lib/features/editor/data/: flow_repository.dart  flow_repository.g.dart
lib/features/editor/presentation/pages/: editor_page.dart  flow_reader_page.dart
lib/features/essays/data/: essay_repository.dart  essay_repository.g.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
packaging/deb/abbey_0.1.0_amd64/DEBIAN/: control
packaging/deb/abbey_0.1.1_amd64/DEBIAN/: control
packaging/rpm/: abbey.spec
resources/: resources.gresource.xml
scripts/: process_icon.py
src/: config.rs  main.rs
src/app/: mod.rs  window.rs  window.ui
src/data/: mod.rs  models.rs  storage.rs
src/ui/: archive_view.rs  archive_view.ui  composition_view.rs  composition_view.ui  editor.rs  flow_history_view.rs  flow_history_view.ui  flow_view.rs  flow_view.ui  markdown_view.rs  mod.rs  projects_view.rs  projects_view.ui  publish_dialog.rs  publish_dialog.ui  theme.rs
src/utils/: markdown.rs  mod.rs
test/: widget_test.dart
(+18 files in other folders)
